@@ -19,16 +19,30 @@ function Objex() {}
  */
 
 /**
- * @param {ObjexExtentionDescriptor|Array} extendStaticProps
+ * @param {*} descriptor
+ * @returns {ObjexExtentionDescriptor}
+ */
+function normalizeExtensionDescriptor(descriptor) {
+    if (typeof descriptor === 'object') {
+        if (Array.isArray(descriptor)) {
+            return { include: descriptor };
+        } else {
+            return descriptor;
+        }
+    } else {
+        return {};
+    }
+}
+
+/**
+ * @param {ObjexExtentionDescriptor|Array|Boolean} extendStaticProps
  * @param {Function} base construtor
  * @param {Function} mixin constructor
  * @returns {Function} base
  */
 function extendStaticProperties(extendStaticProps, base, mixin) {
     var staticProps = Object.getOwnPropertyNames(mixin),
-        type = typeof mixin;
-
-    Array.isArray(mixin) && (type = 'array');
+        type = Array.isArray(mixin) ? 'array' : typeof mixin;
 
     if (typesWithBuiltinProps.indexOf(type) > -1) {
         staticProps = staticProps.filter(function(propName) {
@@ -36,8 +50,7 @@ function extendStaticProperties(extendStaticProps, base, mixin) {
         });
     }
 
-    // normalize extendStaticProps format to ObjexExtentionDescriptor notation
-    Array.isArray(extendStaticProps) && (extendStaticProps = { include : extendStaticProps });
+    extendStaticProps = normalizeExtensionDescriptor(extendStaticProps);
 
     staticProps = staticProps.filter(function(propName) {
         return (extendStaticProps.override || typeof base[propName] === 'undefined') &&
@@ -58,13 +71,6 @@ function extendStaticProperties(extendStaticProps, base, mixin) {
         Object.defineProperty(base, propName, propDescriptor);
     });
 }
-
-Object.defineProperty(Objex, '__objexPrepareInheritor', {
-    value : function(Inheritor) {
-        return Inheritor;
-    },
-    writable : true
-});
 
 /**
  * Setup inheritance between constructors passed as arguments and context constructor
@@ -99,28 +105,29 @@ Object.defineProperty(Objex, '__objexPrepareInheritor', {
  */
 Objex.create = function(Inheritor) {
     var Super = this,
-        extendStaticProps = true;
+        extendStaticProps = true,
+        type = typeof Inheritor;
 
-    if (typeof Inheritor === 'object' || Array.isArray(Inheritor) || typeof Inheritor === 'boolean') {
+    if (type !== 'function' && type !== 'undefined') {
         extendStaticProps = arguments[0];
         Inheritor = arguments[1];
     }
 
     if (typeof Inheritor !== 'function') {
-        Inheritor = this.__objexPrepareInheritor(function() {
+        Inheritor = function() {
             // return result if call constructor w/o `new` operator
             if ( ! (this instanceof Inheritor)) {
                 return Super.apply(this, arguments);
             }
 
             Super.apply(this, arguments);
-        });
+        };
     }
 
     util.inherits(Inheritor, Super);
 
     if ( ! extendStaticProps) {
-        extendStaticProperties(['create', 'mixin', '__objexPrepareInheritor'], Inheritor, Super);
+        extendStaticProperties(['create', 'mixin'], Inheritor, Super);
     } else {
         extendStaticProperties(extendStaticProps, Inheritor, Super);
     }
@@ -140,7 +147,6 @@ Objex.create = function(Inheritor) {
 Objex.mixin = function(mixin) {
     var Base = this,
         extendStaticProps = true,
-        dynamicMixin = typeof mixin.__objexOnMixing === 'function',
         mixinArgs,
         mixinArgsOffset = 1;
 
@@ -164,14 +170,16 @@ Objex.mixin = function(mixin) {
     });
 
     // mixin static fields
-    extendStaticProps && extendStaticProperties(extendStaticProps, Base, mixin);
+    if (extendStaticProps) {
+        extendStaticProperties(extendStaticProps, Base, mixin);
+    }
 
     // dynamic mixing
-    if (dynamicMixin) {
+    if (typeof mixin.__objexOnMixing === 'function') {
         mixinArgs = Array.prototype.slice.call(arguments, mixinArgsOffset);
         mixinArgs.unshift(Base);
 
-        // mixin.__objexOnMixing = function(BaseCtor, args) { ... }
+        // mixin.__objexOnMixing = function(BaseCtor, arg1, ...) { ... }
         mixin.__objexOnMixing.apply(mixin, mixinArgs);
     }
 
@@ -182,10 +190,10 @@ Objex.mixin = function(mixin) {
  * Use to create Objex-like base class which prototype chain different than the Objex > Object
  * @param {Function} Inheritor
  * @param {Function} [Super]
- * @returns {Function} Inheritor extended with `create` and `__super`
+ * @returns {Function} Inheritor extended with `create`, `mixin` and `__super`
  */
 Objex.wrap = function(Inheritor, Super) {
-    extendStaticProperties(['create', 'mixin', '__objexPrepareInheritor'], Inheritor, Objex);
+    extendStaticProperties(['create', 'mixin'], Inheritor, Objex);
 
     if (typeof Super === 'function') {
         Inheritor.__super = Super;
